Wrapper/C C++/audiogenie3.h

DllImport BSTR __stdcall ID3V2GetAddendumDescriptionW(LPCWSTR ID);
DllImport BSTR __stdcall ID3V2GetAddendumTitleW(LPCWSTR ID);
DllImport BSTR __stdcall ID3V2GetAllFrameIDsW();
DllImport BSTR __stdcall ID3V2GetAudioEncryptionURLW(short Index);
DllImport BSTR __stdcall ID3V2GetChildElementIDW(LPCWSTR ID, short Index);
DllImport BSTR __stdcall ID3V2GetCommentDescriptionW(short Index);
DllImport BSTR __stdcall ID3V2GetCommentLanguageW(short Index);
DllImport BSTR __stdcall ID3V2GetCommentW(short Index);
DllImport BSTR __stdcall ID3V2GetCommercialFrameContactURLW(short Index);
DllImport BSTR __stdcall ID3V2GetCommercialFrameDescriptionW(short Index);
DllImport BSTR __stdcall ID3V2GetCommercialFramePictureMimeW(short Index);
DllImport BSTR __stdcall ID3V2GetCommercialFramePriceW(short Index);
DllImport BSTR __stdcall ID3V2GetCommercialFrameSellerNameW(short Index);
DllImport BSTR __stdcall ID3V2GetCommercialFrameValidUntilW(short Index);
DllImport BSTR __stdcall ID3V2GetEncryptionURLW(short Index);
DllImport BSTR __stdcall ID3V2GetEqualisationIdentificationW(short Index);
DllImport BSTR __stdcall ID3V2GetGeneralObjectDescriptionW(short Index);
DllImport BSTR __stdcall ID3V2GetGeneralObjectFilenameW(short Index);
DllImport BSTR __stdcall ID3V2GetGeneralObjectMimeW(short Index);
DllImport BSTR __stdcall ID3V2GetGenreW();
DllImport BSTR __stdcall ID3V2GetGroupIdentificationURLW(short Index);
DllImport BSTR __stdcall ID3V2GetLinkedInformationAdditionalDataW(short Index);
DllImport BSTR __stdcall ID3V2GetLinkedInformationURLW(short Index);
DllImport BSTR __stdcall ID3V2GetLyricDescriptionW(short Index);
DllImport BSTR __stdcall ID3V2GetLyricLanguageW(short Index);
DllImport BSTR __stdcall ID3V2GetLyricW(short Index);
DllImport BSTR __stdcall ID3V2GetOwnershipDateW();
DllImport BSTR __stdcall ID3V2GetOwnershipPriceW();
DllImport BSTR __stdcall ID3V2GetOwnershipSellerW();
DllImport BSTR __stdcall ID3V2GetPictureDescriptionW(short Index);
DllImport BSTR __stdcall ID3V2GetPictureMimeW(short Index);
DllImport BSTR __stdcall ID3V2GetPictureTypeTextW(short Index);
DllImport BSTR __stdcall ID3V2GetPopularimeterEmailW(short Index);
DllImport long __stdcall ID3V2GetAudioEncryptionDataW(BYTE *arr, u32 maxLen, short Index);
DllImport long __stdcall ID3V2GetAudioSeekPointBitsPerIndexpointW();
DllImport long __stdcall ID3V2GetAudioSeekPointDataW(BYTE *arr, u32 maxLen);
DllImport long __stdcall ID3V2GetAudioSeekPointLengthW();
DllImport long __stdcall ID3V2GetAudioSeekPointNumberW();
DllImport long __stdcall ID3V2GetAudioSeekPointStartW();
DllImport long __stdcall ID3V2GetCommercialFramePictureW(BYTE *arr, u32 maxLen, short Index);
DllImport long __stdcall ID3V2GetEncryptionDataW(BYTE *arr, u32 maxLen, short Index);
DllImport long __stdcall ID3V2GetEqualisationDataW(BYTE *arr, u32 maxLen, short Index);
DllImport long __stdcall ID3V2GetEventTimingCodesDataW(BYTE *arr, u32 maxLen);
DllImport long __stdcall ID3V2GetGeneralObjectDataW(BYTE *arr, u32 maxLen, short Index);
DllImport long __stdcall ID3V2GetGroupIdentificationDataW(BYTE *arr, u32 maxLen, short Index);
DllImport long __stdcall ID3V2GetLinkedInformationFrameIdentifierW(short Index);
DllImport long __stdcall ID3V2GetMpegLocationLookupTableBytesDeviationW();
DllImport long __stdcall ID3V2GetMpegLocationLookupTableBytesW();
DllImport long __stdcall ID3V2GetMpegLocationLookupTableDataW(BYTE *arr, u32 maxLen);
DllImport long __stdcall ID3V2GetMpegLocationLookupTableFramesW();
DllImport long __stdcall ID3V2GetMpegLocationLookupTableMillisecondsDeviationW();
DllImport long __stdcall ID3V2GetMpegLocationLookupTableMillisecondsW();
DllImport long __stdcall ID3V2GetMusicCdIdentifierDataW(BYTE *arr, u32 maxLen);
DllImport long __stdcall ID3V2GetPictureArrayW(BYTE *arr, u32 maxLen, short Index);
DllImport long __stdcall ID3V2GetPlayCounterW();
DllImport long __stdcall ID3V2GetPopularimeterCounterW(short Index);
DllImport short __stdcall ID3V2AddMpegLocationLookupTableW(BYTE *arr, u32 length, long Frames, long Bytes, long Milliseconds, BYTE BytesDeviation, BYTE MillisecondsDeviation);
DllImport short __stdcall ID3V2AddMusicCdIdentifierW(BYTE *arr, u32 length);
DllImport short __stdcall ID3V2AddOwnershipW(LPCWSTR Price, LPCWSTR dateString, LPCWSTR Seller);
DllImport short __stdcall ID3V2AddPictureArrayW(BYTE *arr, u32 Length, LPCWSTR Description, short PictureType);
DllImport short __stdcall ID3V2AddPictureFileW(LPCWSTR FileName, LPCWSTR Description, short PictureType, short asLink);
DllImport short __stdcall ID3V2AddPopularimeterW(LPCWSTR Email, short Rating, long Counter);
DllImport short __stdcall ID3V2AddPositionSynchronisationW(BYTE TimestampFormat, long Position);
DllImport short __stdcall ID3V2AddPrivateFrameW(BYTE *arr, u32 length, LPCWSTR URL);
DllImport short __stdcall ID3V2AddRecommendedBufferSizeW(long BufferSize, BYTE EmbeddedInfoFlag, long Offset);
DllImport short __stdcall ID3V2AddRelativeVolumeAdjustmentW(BYTE *arr, u32 length, LPCWSTR Identifier);
DllImport short __stdcall ID3V2AddReverbW(short reverbLeft, short reverbRight, BYTE bouncesLeft, BYTE bouncesRight, BYTE feedbackLeftToLeft, BYTE feedbackLeftToRight, BYTE feedbackRightToRight, BYTE feedbackRightToLeft, BYTE premixLeftToRight, BYTE premixRightToLeft);
DllImport short __stdcall ID3V2AddSignatureFrameW(BYTE *arr, u32 length, short GroupSymbol);
DllImport short __stdcall ID3V2AddSynchronizedTempoW(BYTE *arr, u32 length, short Format);
DllImport short __stdcall ID3V2AddSyncLyricW(LPCWSTR Language, LPCWSTR Description, LPCWSTR Text, short ContentType, short TimeStampFormat);
DllImport short __stdcall ID3V2AddTableOfContentW(LPCWSTR ID, LPCWSTR Title, LPCWSTR Description, short isOrdered);
DllImport short __stdcall ID3V2AddUniqueFileIdentifierW(BYTE *arr, u32 length, LPCWSTR Owner);
DllImport short __stdcall ID3V2AddUserFrameW(LPCWSTR Language, LPCWSTR Text);
DllImport short __stdcall ID3V2AddUserTextW(LPCWSTR Description, LPCWSTR Text);
DllImport short __stdcall ID3V2AddUserURLW(LPCWSTR Description, LPCWSTR URL);
DllImport short __stdcall ID3V2DeleteAddendumW(LPCWSTR ID);
DllImport short __stdcall ID3V2DeleteAllFramesW(u32 FrameID);
DllImport short __stdcall ID3V2DeleteChildElementW(LPCWSTR ParentTocID, LPCWSTR ChildID);
DllImport short __stdcall ID3V2DeleteSelectedFrameW(u32 FrameID, short Index);
DllImport short __stdcall ID3V2DeleteSubFrameW(LPCWSTR ID, long FrameID);
DllImport short __stdcall ID3V2ExistsW();
DllImport short __stdcall ID3V2GetAddendumTypeW(LPCWSTR ID);
DllImport short __stdcall ID3V2GetAudioEncryptionPreviewLengthW(short Index);
DllImport short __stdcall ID3V2GetAudioEncryptionPreviewStartW(short Index);
DllImport short __stdcall ID3V2GetChildElementsW(LPCWSTR ID);
DllImport short __stdcall ID3V2GetCommercialFrameReceivedAsW(short Index);
DllImport short __stdcall ID3V2GetEncodingW(u32 FrameID);
DllImport short __stdcall ID3V2GetEncryptionSymbolW(short Index);
DllImport short __stdcall ID3V2GetEqualisationAdjustmentBitsW(short Index);
DllImport short __stdcall ID3V2GetEqualisationInterpolationW(short Index);
DllImport short __stdcall ID3V2GetEventTimingCodesTimestampFormatW();
DllImport short __stdcall ID3V2GetFrameCountW(u32 FrameID);
DllImport short __stdcall ID3V2GetGroupIdentificationSymbolW(short Index);
DllImport short __stdcall ID3V2GetPictureFileW(LPCWSTR FileName, short Index);
DllImport short __stdcall ID3V2GetPictureTypeW(short Index);
DllImport u32 __stdcall ID3V2GetChapterEndTimeW(LPCWSTR ID);
DllImport u32 __stdcall ID3V2GetChapterStartTimeW(LPCWSTR ID);