Wrapper/VB6/clsAudioGenie.cls

Private Declare Function ID3V2AddMpegLocationLookupTableW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal Length As Long, ByVal Frames As Long, ByVal Bytes As Long, ByVal Milliseconds As Long, ByVal BytesDeviation As Byte, ByVal MillisecondsDeviation As Byte) As Integer
Private Declare Function ID3V2AddMusicCdIdentifierW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal Length As Long) As Integer
Private Declare Function ID3V2AddOwnershipW Lib "AudioGenie3.dll" (ByVal Price As Long, ByVal dateString As Long, ByVal Seller As Long) As Integer
Private Declare Function ID3V2AddPictureArrayW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Description As Long, ByVal PictureType As Integer) As Integer
Private Declare Function ID3V2AddPictureFileW Lib "AudioGenie3.dll" (ByVal FileName As Long, ByVal Description As Long, ByVal PictureType As Integer, ByVal asLink As Integer) As Integer
Private Declare Function ID3V2AddPopularimeterW Lib "AudioGenie3.dll" (ByVal Email As Long, ByVal Rating As Integer, ByVal Counter As Long) As Integer
Private Declare Function ID3V2AddPositionSynchronisationW Lib "AudioGenie3.dll" (ByVal TimestampFormat As Byte, ByVal Position As Long) As Integer
Private Declare Function ID3V2AddPrivateFrameW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal Length As Long, ByVal URL As Long) As Integer
Private Declare Function ID3V2AddRecommendedBufferSizeW Lib "AudioGenie3.dll" (ByVal BufferSize As Long, ByVal EmbeddedInfoFlag As Byte, ByVal offset As Long) As Integer
Private Declare Function ID3V2AddRelativeVolumeAdjustmentW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal Length As Long, ByVal Identifier As Long) As Integer
Private Declare Function ID3V2AddReverbW Lib "AudioGenie3.dll" (ByVal reverbLeft As Integer, ByVal reverbRight As Integer, ByVal bouncesLeft As Byte, ByVal bouncesRight As Byte, ByVal feedbackLeftToLeft As Byte, ByVal feedbackLeftToRight As Byte, ByVal feedbackRightToRight As Byte, ByVal feedbackRightToLeft As Byte, ByVal premixLeftToRight As Byte, ByVal premixRightToLeft As Byte) As Integer
Private Declare Function ID3V2AddSignatureFrameW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal Length As Long, ByVal GroupSymbol As Integer) As Integer
Private Declare Function ID3V2AddSyncLyricW Lib "AudioGenie3.dll" (ByVal Language As Long, ByVal Description As Long, ByVal text As Long, ByVal ContentType As Integer, ByVal TimestampFormat As Integer) As Integer
Private Declare Function ID3V2AddSynchronizedTempoW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal Length As Long, ByVal format As Integer) As Integer
Private Declare Function ID3V2AddTableOfContentW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal Title As Long, ByVal Description As Long, ByVal isOrdered As Integer) As Integer
Private Declare Function ID3V2AddUniqueFileIdentifierW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal Length As Long, ByVal Owner As Long) As Integer
Private Declare Function ID3V2AddUserFrameW Lib "AudioGenie3.dll" (ByVal Language As Long, ByVal text As Long) As Integer
Private Declare Function ID3V2AddUserTextW Lib "AudioGenie3.dll" (ByVal Description As Long, ByVal text As Long) As Integer
Private Declare Function ID3V2AddUserURLW Lib "AudioGenie3.dll" (ByVal Description As Long, ByVal URL As Long) As Integer
Private Declare Function ID3V2DeleteAddendumW Lib "AudioGenie3.dll" (ByVal ID As Long) As Integer
Private Declare Function ID3V2DeleteAllFramesW Lib "AudioGenie3.dll" (ByVal frameID As Long) As Integer
Private Declare Function ID3V2DeleteChildElementW Lib "AudioGenie3.dll" (ByVal ParentTocID As Long, ByVal ChildID As Long) As Integer
Private Declare Function ID3V2DeleteSelectedFrameW Lib "AudioGenie3.dll" (ByVal frameID As Long, ByVal Index As Integer) As Integer
Private Declare Function ID3V2DeleteSubFrameW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal frameID As Long) As Integer
Private Declare Function ID3V2ExistsW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetAddendumDescriptionW Lib "AudioGenie3.dll" (ByVal ID As Long) As String
Private Declare Function ID3V2GetAddendumTitleW Lib "AudioGenie3.dll" (ByVal ID As Long) As String
Private Declare Function ID3V2GetAddendumTypeW Lib "AudioGenie3.dll" (ByVal ID As Long) As Integer
Private Declare Function ID3V2GetAllFrameIDsW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V2GetAudioEncryptionDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function ID3V2GetAudioEncryptionPreviewLengthW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetAudioEncryptionPreviewStartW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetAudioEncryptionURLW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetAudioSeekPointBitsPerIndexpointW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetAudioSeekPointDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long) As Long
Private Declare Function ID3V2GetAudioSeekPointLengthW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetAudioSeekPointNumberW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetAudioSeekPointStartW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetChapterEndTimeW Lib "AudioGenie3.dll" (ByVal ID As Long) As Long
Private Declare Function ID3V2GetChapterStartTimeW Lib "AudioGenie3.dll" (ByVal ID As Long) As Long
Private Declare Function ID3V2GetChildElementIDW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal Index As Integer) As String
Private Declare Function ID3V2GetChildElementsW Lib "AudioGenie3.dll" (ByVal ID As Long) As Integer
Private Declare Function ID3V2GetCommentDescriptionW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetCommentLanguageW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetCommentW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetCommercialFrameContactURLW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetCommercialFrameDescriptionW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetCommercialFramePictureMimeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetCommercialFramePictureW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function ID3V2GetCommercialFramePriceW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetCommercialFrameReceivedAsW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetCommercialFrameSellerNameW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetCommercialFrameValidUntilW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetEncodingW Lib "AudioGenie3.dll" (ByVal frameID As Long) As Integer
Private Declare Function ID3V2GetEncryptionDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function ID3V2GetEncryptionSymbolW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetEncryptionURLW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetEqualisationAdjustmentBitsW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetEqualisationDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function ID3V2GetEqualisationIdentificationW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetEqualisationInterpolationW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetEventTimingCodesDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long) As Long
Private Declare Function ID3V2GetEventTimingCodesTimestampFormatW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetFrameCountW Lib "AudioGenie3.dll" (ByVal frameID As Long) As Integer
Private Declare Function ID3V2GetGeneralObjectDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function ID3V2GetGeneralObjectDescriptionW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetGeneralObjectFilenameW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetGeneralObjectMimeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetGenreW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V2GetGroupIdentificationDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function ID3V2GetGroupIdentificationSymbolW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetGroupIdentificationURLW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetLinkedInformationAdditionalDataW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetLinkedInformationFrameIdentifierW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Long
Private Declare Function ID3V2GetLinkedInformationURLW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetLyricDescriptionW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetLyricLanguageW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetLyricW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetMpegLocationLookupTableBytesDeviationW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetMpegLocationLookupTableBytesW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetMpegLocationLookupTableDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long) As Long
Private Declare Function ID3V2GetMpegLocationLookupTableFramesW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetMpegLocationLookupTableMillisecondsDeviationW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetMpegLocationLookupTableMillisecondsW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetMusicCdIdentifierDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long) As Long
Private Declare Function ID3V2GetOwnershipDateW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V2GetOwnershipPriceW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V2GetOwnershipSellerW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V2GetPictureArrayW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function ID3V2GetPictureDescriptionW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetPictureFileW Lib "AudioGenie3.dll" (ByVal FileName As Long, ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetPictureMimeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetPictureTypeTextW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetPictureTypeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetPlayCounterW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetPopularimeterCounterW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Long
Private Declare Function ID3V2GetPopularimeterEmailW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
